[tool.poetry]
name = "bert-gcn-for-paper-citation"
version = "0.1.0"
description = ""
authors = ["HelloRusk <hellorusk1998@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7"
tensorflow = "1.15.4"
pandas = "^1.1.3"
sklearn = "^0.0"
tensorflow-gpu = "1.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
